# none

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTORS.rst  LICENSE.rst  README.rst  pyproject.toml
.circleci/: config.yml
docs/: conf.py  index.rst
docs/_lib/graphs/: none.task.abc.Task.run.dot
docs/api/: index.rst  none.callable.rst  none.collection.a.rst  none.collection.rst  none.hash.cdc.rst  none.hash.rst  none.rst  none.task.abc.rst  none.task.rst  none.text.case.rst  none.text.rst  none.url.rst
none/: __init__.py  callable.py  typeset.py  url.py
none/collection/: __init__.py  a.py  i.py
none/hash/: __init__.py  tree.py
none/hash/cdc/: __init__.py  fastcdc.py
none/task/: __init__.py  abc.py
none/text/: __init__.py  case.py
tests/: __init__.py  conftest.py  test_callable.py  test_lib.py  test_url.py
tests/collection/: __init__.py  a.py  test_a.py  test_i.py
tests/hash/: __init__.py  test_tree.py
tests/hash/cdc/: __init__.py  test_fastcdc.py
tests/lib/: __init__.py
tests/lib/data/: metadata.json
tests/lib/hash/cdc/: fastcdc.json
tests/lib/hash/tree/: merkle.json
tests/task/: __init__.py  test_abc.py
tests/text/: __init__.py  test_case.py
