# pyproject.toml
# ==============
#
# Copying
# -------
#
# Copyright (c) 2020 none authors and contributors.
#
# This file is part of the *none* project.
#
# None is a free software project. You can redistribute it and/or
# modify it following the terms of the MIT License.
#
# This software project is distributed *as is*, WITHOUT WARRANTY OF ANY
# KIND; including but not limited to the WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE and NONINFRINGEMENT.
#
# You should have received a copy of the MIT License along with
# *none*. If not, see <http://opensource.org/licenses/MIT>.
#
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.isort]
known_third_party = ["hypothesis", "pkg_resources", "pytest", "rfc3986"]
atomic = true
combine_as_imports = true
combine_star = true
include_trailing_comma = true
length_sort = true
line_length = 80
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
order_by_type = true
use_parentheses = true


[tool.poetry]
name = "none"
version = "0.1.1"
authors = ["See AUTHORS.rst <dev@jimmy.lt>"]
maintainers = [
    "Jimmy Thrasibule <dev@jimmy.lt>",
]
description = "An extensive library providing additional facilities to the Python Standard Library."
license = "MIT"
readme = "README.rst"
repository = "https://github.com/spack971/none"
keywords = ["extensive", "additional", "library", "utilities", "tools"]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = [
    "AUTHORS.rst",
    "CONTRIBUTORS.rst",
]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = {version = "^5.1.0", extras = ["docs"]}
rfc3986 = {version = "^2.0.0", extras = ["url"]}

[tool.poetry.dev-dependencies]
hypothesis = "*"
pre-commit = "*"
pyre-check = "*"
pytest = "*"
pytest-xdist = "*"
coverage = "*"
pytest-asyncio = "*"
setuptools = {version = "*", extras = ["tests"]}
